<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="268dp"
    android:layout_gravity="center"
    android:background="#ff4500"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/reset_title"
        android:textSize="@dimen/title_font" />

    <Button
        android:id="@+id/stats_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/reset_stats" />

    <Button
        android:id="@+id/outs_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/reset_stats_outs" />

    <Button
        android:id="@+id/all_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/reset_all" />

    <Button
        android:id="@+id/cancel_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/reset_cancel" />

</LinearLayout>